--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,25 +1,21 @@
 <h1>Your Pragmatic Catalog</h1>
 
-<% if @count > 5 %>
-<p>You have visited this page
-  <%= pluralize(@count, 'time') %>.
-</p>
-<% end %>
 
   <% @products.each do |product| -%>
 
   <div class="entry">
-    <%= link_to(image_tag(product.image_url), :method => :post,
-                                              :action => 'add_to_cart',
-                                              :id => product) %>
+    <%= link_to_remote(image_tag(product.image_url),
+          :url => { :action => 'add_to_cart', :id => product }) %>
     <h3><%=h product.title %></h3>
     <%= product.description %>
     <div class="price-line">
       <span class="price"><%= number_to_currency(product.price,
                                                 :unit => "&pound;")
                           %></span>
-      <%= button_to 'Add to Cart', :action => 'add_to_cart',
-                                   :id => product %>
+      <% form_remote_tag :url => { :action => 'add_to_cart', 
+                                   :id => product } do %>
+        <%= submit_tag "Add to Cart" %>
+      <% end %>
     </div>
   </div>
   <% end %>
