--- a/app/views/store/_cart.html.erb
+++ b/app/views/store/_cart.html.erb
@@ -12,4 +12,6 @@
 
 </table>
 
-<%= button_to 'Empty cart', :action => 'empty_cart' %>
+<% form_remote_tag :url => { :action => 'empty_cart' } do %>
+  <%= submit_tag "Empty Cart" %>
+<% end %>
