--- a/app/views/store/_cart_item.html.erb
+++ b/app/views/store/_cart_item.html.erb
@@ -6,4 +6,12 @@
     <td><%= cart_item.quantity %>&times;</td>
     <td><%=h cart_item.title %></td>
     <td class="item-price"><%= number_to_currency(cart_item.price) %></td>
+    <td>
+      <%= link_to_remote "decrement", 
+             { :url => { :action => "decrement_item", 
+                         :id => cart_item.product } },
+             :href => url_for(:action => "decrement_item",
+                              :id => cart_item.product)
+      %>
+    </td>
 </tr>
