Finished chapter 10 (except for the silly stuff about putting card
details in the db)

--- a/app/views/store/_cart.html.erb
+++ b/app/views/store/_cart.html.erb
@@ -12,6 +12,10 @@
 
 </table>
 
+<% if @order.nil? %>
+  <%= button_to "Checkout", :action => 'checkout' %>
+<% end %>
+
 <% form_remote_tag :url => { :action => 'empty_cart' } do %>
   <%= submit_tag "Empty Cart" %>
 <% end %>
