--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -16,14 +16,26 @@
 
     <div id="columns">
       <div id="side">
-        <% hidden_div_if(@cart.items.empty?, :id => "cart") do %>
-          <%= render(:partial => "cart", :object => @cart) %>
+        <% if @cart %>
+          <% hidden_div_if(@cart.items.empty?, :id => "cart") do %>
+            <%= render(:partial => "cart", :object => @cart) %>
+          <% end %>
         <% end %>
         <p class="time"><%= Time.now %></p>
-        <a href="#">Home</a><br />
+        <%= link_to 'Home', :controller => 'store' %><br />
         <a href="#">Questions</a><br />
         <a href="#">News</a><br />
         <a href="#">Contact</a><br />
+
+        <% if session[:user_id] %>
+          <br />
+          <%= link_to 'Orders', :controller => 'orders' %><br />
+          <%= link_to 'Products', :controller => 'products' %><br />
+          <%= link_to 'Users', :controller => 'users' %><br />
+          <br />
+          <%= link_to 'Logout', :controller => 'admin', 
+                                :action => 'logout' %>
+        <% end -%>
       </div>
 
       <div id="main">
