--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :price %><br />
     <%= f.text_field :price %><br />
   <p>
+    <%= f.label :locale %><br />
+    <%= f.text_field :locale %>
+  </p>
+  <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
