--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,10 @@
         </dl>
       </td>
 
+      <td class="list-locale">
+        <%=h product.locale %>
+      </td>
+
       <td class="list-actions">
         <%= link_to 'Show', product %><br />
         <%= link_to 'Edit', edit_product_path(product) %><br />
