--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -22,6 +22,10 @@
   <p>
     <%= f.submit 'Create' %>
   </p>
+  <p>
+    <%= f.label :locale %><br />
+    <%= f.text_field :locale %>
+  </p>
 <% end %>
 
 <%= link_to 'Back', products_path %>
