--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Your Pragmatic Catalog</h1>
+<h1><%=t 'main.title' %></h1>
 
 
   <% @products.each do |product| -%>
@@ -11,12 +11,11 @@
     <h3><%=h product.title %></h3>
     <%= product.description %>
     <div class="price-line">
-      <span class="price"><%= number_to_currency(product.price,
-                                                :unit => "&pound;")
+      <span class="price"><%= number_to_currency(product.price)
                           %></span>
       <% form_remote_tag :url => { :action => 'add_to_cart', 
                                    :id => product } do %>
-        <%= submit_tag "Add to Cart" %>
+        <%= submit_tag t 'main.button.add' %>
       <% end %>
     </div>
   </div>
